[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.10", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-cors = "0.7.1"
actix-files = "0.6.8"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"]}
urlencoding = "2"
