[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
jsonwebtoken = { version = "9", features = ["use_pem"] }
base64 = "0.22"
anyhow = "1.0.100"
